--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
             <div id="about-text">
                 <dl>
                     <dt><h1>About</h1></dt>
-                    <dd>I'm Srinivasan V, Finished my schooling in Chennai. Persuing a degree in Bachelor's of Engineering (Computer Science Engineering) in Coimbatore. Striving to be an Web Developer. I have learned React, Node, Express, MongoDB. And the technology stack i use often is MERN Stack. I'm also intermediate in languages like C, Python, Java. I have done many certifications in NPTEL Platform. I have done an internship in MERN Stack Web Development domain. I have done projects like Natural Resource Management System using Java, MySQL and connected them using JDBC connectivity and also created a Resume-Creator Webpage whisch is used to create professional-looking resumes using HTML, CSS, JavaScript and Bootstrap.</dd>
+                    <dd>I'm Srinivasan V, Finished my schooling in Chennai. Persuing a degree in Bachelor's of Engineering (Computer Science Engineering) in Coimbatore. Striving to be an Web Developer. I have learned React, Node, Express, MongoDB. And the technology stack i use often is MERN Stack. I'm also intermediate in languages like C, Python, Java. I have done many certifications in NPTEL Platform. I have done an internship in MERN Stack Web Development domain. I have done projects like Natural Resource Management System using Java, MySQL and connected them using JDBC connectivity and also created a Resume-Creator Webpage which is used to create professional-looking resumes using HTML, CSS, JavaScript and Bootstrap.</dd>
                 </dl>
             </div>
     </body>
